<resources>
    <string name="app_name">Dr. weather</string>
    <string name="add_data">Add Patent\'s Data</string>
    <string name="p_name">Patent name</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="empty_field">Empty Field here</string>
    <string name="h_press">High</string>
    <string name="l_press">Low</string>
    <string name="age">Age</string>
    <string name="submit_data">Submit data</string>
    <string name="choose_birthday">Choose birthday</string>
    <string name="heart_rate">Heart rate</string>
    <string name="gender">Gender</string>
    <string name="pregnancy">Pregnancy:</string>
    <string name="action_Notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="diabetic">Diabetic:</string>
    <string name="asthmatic">Asthmatic:</string>
    <string name="daily_ex">Daily exercise (optional):</string>
    <string name="restrict">Allergies / restrictions (ex: Food)</string>
    <string name="med">Medication (optional)</string>
    <string name="resp_rate">Respiratory rate per minute (Optional)</string>
    <string name="sleep_hours">Sleep hours (optional)</string>
    <string name="emergency_contact">Emergency contact (optional)</string>
    <string name="body_temp">Body temperature (C )</string>
    <string name="done_upload">Done uploading your data\nwait for our predections and advice</string>
    <string name="pick">Pick loacation</string>
    <string name="places_api">AIzaSyBJI7RanAwyjzDjDPsfNQErP3EJN9WmSqw</string>
    <string name="error_upload">Error while uploading data</string>
    <string name="done">Done</string>
    <string name="exit_uploading">Exit uploading page</string>
    <string name="are_you_sure">Are you sure to exit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="blood_press">Blood pressure:</string>
    <string name="error_pick">Pick location first!</string>
    <string name="blood_type">Blood type</string>
    <string-array name="gender">
        <item>male</item>
        <item>female</item>
        <item>not to mention</item>
    </string-array>
    <string-array name="yes_no">
        <item>no</item>
        <item>yes</item>
    </string-array>
    <string-array name="blood">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
</resources>
