<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:theme="@style/MyToolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:id="@+id/toolbar"/>
    </android.support.design.widget.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_alpha"
        android:elevation="100dp"
        android:visibility="gone"
        android:id="@+id/progress">
        <ProgressBar
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name"
                        android:singleLine="true"
                        android:hint="@string/p_name"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/choose_day"
                    android:text="@string/choose_birthday"
                    android:theme="@style/MyButton"
                    android:layout_marginBottom="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:id="@+id/date"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_marginBottom="4dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round"
                    android:layout_marginBottom="8dp">
                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp" />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/preg_text"
                    android:text="@string/pregnancy"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_marginBottom="4dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round"
                    android:layout_marginBottom="8dp">
                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/preg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp" />
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/height"
                        android:singleLine="true"
                        android:hint="@string/height"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/weight"
                        android:singleLine="true"
                        android:hint="@string/weight"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_type"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_marginBottom="4dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round">
                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/blood_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp" />
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/body_temp"
                        android:singleLine="true"
                        android:hint="@string/body_temp"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diabetic"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:layout_marginBottom="4dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round"
                    android:layout_marginBottom="8dp">
                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/diabetic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp" />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/asthmatic"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_marginBottom="4dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round"
                    android:layout_marginBottom="8dp">
                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/asthmatic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp" />
                </LinearLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyButton"
                    android:id="@+id/pick"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/pick"
                    android:layout_marginBottom="8dp"/>
                <!--**********************-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_press"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_marginBottom="4dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/h_press"
                            android:singleLine="true"
                            android:hint="@string/h_press"
                            android:inputType="number"
                            android:nextFocusForward="@id/l_press"/>
                    </android.support.design.widget.TextInputLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/"
                        android:layout_gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/l_press"
                            android:singleLine="true"
                            android:hint="@string/l_press"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/heart_rate"
                        android:singleLine="true"
                        android:hint="@string/heart_rate"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_ex"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_marginBottom="4dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round">
                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/daily_ex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp" />
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/restrict"
                        android:singleLine="true"
                        android:hint="@string/restrict"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/med"
                        android:singleLine="true"
                        android:hint="@string/med"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/resp_rate"
                        android:singleLine="true"
                        android:hint="@string/resp_rate"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sleep_hours"
                        android:singleLine="true"
                        android:hint="@string/sleep_hours"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/emergency_contact"
                        android:singleLine="true"
                        android:hint="@string/emergency_contact"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:theme="@style/MyButton"
            android:id="@+id/submit_data"
            android:text="@string/submit_data"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>